tests/shouldFail/j074b.c
int * restrict x;
int * volatile x;

int main(void){
	return 0;
}
